--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
     <div class="hero">
       <div>
+        <img src="/images/pattern-curved-line-1.svg" alt="#" />
         <h1>A <span>super solution</span> for your <span>business</span></h1>
         <p>
           Our marketing and sales automations help you scale your outreach to
@@ -21,7 +22,12 @@
         </p>
         <a href="#">Request Beta Access</a>
       </div>
-      <div><img src="/images/image-hero-portrait.png" alt="#" /></div>
+      <div>
+        <p><span>2k+</span>companies</p>
+        <p><span>8</span>Languages</p>
+        <p><span>1.2M</span>Leads</p>
+      </div>
+      <img src="/images/image-hero-portrait.png" alt="#" />
     </div>
   </body>
 </html>
