write html for testimonial section

--- a/index.html
+++ b/index.html
@@ -29,5 +29,16 @@
       </div>
       <img src="/images/image-hero-portrait.png" alt="#" />
     </div>
+    <div class="testimonial">
+      <div><img src="/images/image-jeremy-small.png" alt="" /></div>
+      <div>
+        <h2>It just <span>Works</span></h2>
+        <p>
+          "I really like how it is an all-in-one solution that handles many of
+          the tasks that you would need separate tools to do the same job. This
+          this is a miricle worker"
+        </p>
+      </div>
+    </div>
   </body>
 </html>
