position images in testimonials

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
       <img src="/images/image-hero-portrait.png" alt="#" />
     </div>
     <div class="testimonial">
-      <div><img src="/images/image-jeremy-small.png" alt="" /></div>
+      <div>
+        <img src="/images/pattern-blur.svg" alt="" />
+        <img src="/images/image-jeremy-small.png" alt="" />
+      </div>
       <div>
         <h2>It just <span>Works</span></h2>
         <p>
