finish testimonial section

--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
         <img src="/images/image-jeremy-small.png" alt="" />
       </div>
       <div>
-        <h2>It just <span>Works</span></h2>
+        <h2>It just <span>Works!</span></h2>
         <p>
           "I really like how it is an all-in-one solution that handles many of
           the tasks that you would need separate tools to do the same job. This
-          this is a miricle worker"
+          thing is a miracle worker"
         </p>
+        <span>Jeremy Robinson</span>
+        <p>CMO,FYLO</p>
       </div>
     </div>
   </body>
