--- a/index.html
+++ b/index.html
@@ -45,5 +45,14 @@
         <p>CMO,FYLO</p>
       </div>
     </div>
+    <div class="footer">
+      <h3>SUITE</h3>
+      <p>copywright-suite</p>
+      <div>
+        <img src="/images/icon-facebook.svg" alt="#" />
+        <img src="/images/icon-instagram.svg" alt="#" />
+        <img src="/images/icon-twitter.svg" alt="#" />
+      </div>
+    </div>
   </body>
 </html>
